aws/basic_cloudformation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "AWS CloudFormation CIL template. Creates an EC2 centos instance off of a base centos image with apache and php installed. This template provides ssh access to the machine created. **WARNING** This template creates an Amazon EC2 instance. You will be billed for the AWS resources used if you create a stack from this template.",
    "Parameters": {
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instance",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
        },
        "ServiceInstanceType": {
            "Description": "EC2 instance type",
            "Type": "String",
            "Default": "m5.xlarge",
            "AllowedValues": [
                "m5.large",
                "m5.xlarge",
                "m5.2xlarge"
            ],
            "ConstraintDescription": "must be a valid EC2 instance type."
        },
        "ServiceDiskSize": {
            "Description": "Size of EC2 instance disk in gigabytes",
            "Type": "Number",
            "Default": "300",
            "MinValue": "50",
            "ConstraintDescription": "must be a whole number 50 or larger"
        },
        "SSHLocation": {
            "Description": "The IP address range that can be used to SSH to the EC2 instances",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "0.0.0.0/0",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
        }
	
    },
    "Mappings" : {
       "RegionMap" : {
           "ap-south-1"    : { "AMI" : "ami-82a3eaed"},
           "eu-west-3"    : { "AMI" : "ami-0c60d771"},
           "eu-west-2"    : { "AMI" : "ami-c8d7c9ac"},
           "eu-west-1"    : { "AMI" : "ami-192a9460"},
           "ap-northeast-2"    : { "AMI" : "ami-53a1073d"},
           "ap-northeast-1"    : { "AMI" : "ami-4dd5522b"},
           "sa-east-1"    : { "AMI" : "ami-6b5c1b07"},
           "ca-central-1"    : { "AMI" : "ami-b111aad5"},
           "ap-southeast-1"    : { "AMI" : "ami-a6e88dda"},
           "ap-southeast-2"    : { "AMI" : "ami-5b778339"},
           "eu-central-1"    : { "AMI" : "ami-1e038d71"},
           "us-east-1"    : { "AMI" : "ami-02e98f78"},
           "us-east-2"    : { "AMI" : "ami-e0eac385"},
           "us-west-1"    : { "AMI" : "ami-b1a59fd1"},
           "us-west-2"    : { "AMI" : "ami-b63ae0ce"}
       }       
    },
    "Resources": {
        "ServiceInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "InstanceType": {
                    "Ref": "ServiceInstanceType"
                },
                "SecurityGroups": [
                    {
                        "Ref": "InstanceSSHSecurityGroup"
                    },
                    {
                        "Ref": "InstanceHTTPSecurityGroup"
                    }
                ],
                "KeyName": {
                    "Ref": "KeyName"
                },
                "ImageId": {
                    "Fn::FindInMap": [ "RegionMap",
                        { "Ref": "AWS::Region" }, "AMI" ]
                    
                },
                "BlockDeviceMappings" : [
                    {
                      "DeviceName" : "/dev/sda1",
                      "Ebs" : { 
                                 "VolumeSize" : { "Ref": "ServiceDiskSize" },
                                 "VolumeType" : "gp2"
                              }
                    }
                ],
                "Tags" : [ 
                    {
                      "Key" : "Name", "Value" : { "Ref": "AWS::StackName" } 
                    }
                ],

                "UserData"    : { "Fn::Base64" : { "Fn::Join" : [ "", [
                     "#!/bin/bash\n\n",
                     "echo 'Running yum update'\n",
                     "yum update -y\n",
                     "echo 'Done running update'\n",
                     "yum -y install epel-release\n",
                     "yum -y install python httpd php php-pgsql zip unzip\n",
                     "yum -y proftpd proftpd-postgresql ImageMagick\n",
                     "easy_install pip\n",
                     "pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
                     "systemctl enable httpd\n",
                     "systemctl start httpd\n",
                     "setsebool -P httpd_can_network_connect_db on\n",
                     "sudo -u centos echo 'ssh-rsa AAAAB3NzaC1yc2EAAAABJQAAAgEAkbzo21Kkyb54EDvKsry1ffOP1JxbGAYwjg/xKmYLVeBGKaCQ02f05TE84yMGz3PQJ5oKQnm5GjpxdYk4vCjvtEQ4ssJg+cF6sH37D318zdoEV57BhnbPiIvoGk1QFLwJV7HXUcyEq6DmTJYTNuEI2h9ApgYAr+++d0c50PX2THSc7sBvlOrgmT95pLCI9t543Lj2kzuTBFuJ9UMhOHaRJcgMOFS+khW+LMdxT20mjHqJ69cCLZBAYq3PthgighZVvrIwx7uqdGiiBya4C4NyVR63TSXbVcNVdRpJ6sw3f+tgGmLrlbeSw5e9yVv5rtTmCgKmWstQX/zKK4mRBC4KHkfetLfOzEFUyLXYE9bemg+0+/kBgdSXUBstPOIhqNVDQcTkZKZpN8u8cmVi+Zhpd7X8aNiqBBkoqBJlK [...]
                     "/sbin/adduser ciluploader\n",
                     "sudo -u ciluploader mkdir -p /home/ciluploader/.ssh\n",
                     "sudo -u ciluploader chmod 0700 /home/ciluploader/.ssh\n",
                     "/bin/cp /home/centos/.ssh/authorized_keys /home/ciluploader/.ssh/.\n",
                     "chown ciluploader.ciluploader /home/ciluploader/.ssh/authorized_keys\n",
                     "mkdir -p /export2/upload\n",
                     "chown apache.apache /export2/upload\n",
                     "usermod -a -G apache ciluploader\n",
                     "usermod -a -G ciluploader apache\n",
                     "echo 'Done with update'\n",
                     "/bin/cfn-signal --exit-code 0 -i service1 '", { "Ref" : "WaitHandle" }, "'\n"
                       ]]}}
            }, 
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "4ad8b7df-e9a7-4256-9ab2-9f548d4bb695"
                }
            }
        },
        "InstanceSSHSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable SSH access via port 22 from ucsd campus ip addresses",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "128.54.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "132.239.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "137.110.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "169.228.0.0/16"
                    }
                ]
            },
            "Metadata": {
                "AWS::CloudFormation::Designer": {
                    "id": "85d8cb29-8b24-41c8-bca9-498f219d2b6e"
                }
            }
        },

        "InstanceHTTPSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Enable HTTP access from ucsd campus ip addresses",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "128.54.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "132.239.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "137.110.0.0/16"
                    },
                    {
                      "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "169.228.0.0/16"
                    }
                ]
            }
        },
        "WaitHandle" : {
            "Type" : "AWS::CloudFormation::WaitConditionHandle",
            "Properties" : {
            }
        },
        "WaitCondition" : {
            "Type" : "AWS::CloudFormation::WaitCondition",
            "DependsOn" : "ServiceInstance",
            "Properties" : {
                "Handle" : { "Ref" : "WaitHandle" },
                "Timeout" : "4500"
            }
        }
    },
    "Outputs": {
        "InstanceId": {
            "Description": "InstanceId of the newly created EC2 instance",
            "Value": {
                "Ref": "ServiceInstance"
            }
        },
        "AZ": {
            "Description": "Availability Zone of the newly created EC2 instance",
            "Value": {
                "Fn::GetAtt": [
                    "ServiceInstance",
                    "AvailabilityZone"
                ]
            }
        },
        "PublicDNS": {
            "Description": "Public DNSName of the newly created EC2 instance",
            "Value": {
                "Fn::GetAtt": [
                    "ServiceInstance",
                    "PublicDnsName"
                ]
            }
        },
        "PublicIP": {
            "Description": "Public IP address of the newly created EC2 instance",
            "Value": {
                "Fn::GetAtt": [
                    "ServiceInstance",
                    "PublicIp"
                ]
            }
        }
    },
    "Metadata": {
        "AWS::CloudFormation::Designer": {
            "85d8cb29-8b24-41c8-bca9-498f219d2b6e": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 60,
                    "y": 90
                },
                "z": 1,
                "embeds": []
            },
            "4ad8b7df-e9a7-4256-9ab2-9f548d4bb695": {
                "size": {
                    "width": 60,
                    "height": 60
                },
                "position": {
                    "x": 180,
                    "y": 90
                },
                "z": 1,
                "embeds": [],
                "isassociatedwith": [
                    "85d8cb29-8b24-41c8-bca9-498f219d2b6e"
                ]
            }
        }
    }
}
